force-app/main/default/objects/DocGen_Email_Template__c/DocGen_Email_Template__c.object-meta.xml
<CustomObject>
    <description
    >Stores admin-defined, brandable email templates (subject + HTML body + branding) for every Portwood signature/notification email. One active record per Type__c is resolved at send time by DocGenEmailTemplateService; if a record is missing the service renders a built-in default so email always sends out of the box (#193).</description>
    <label>Portwood Email Template</label>
    <nameField>
        <label>Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portwood Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>