force-app/main/default/objects/DocGen_Email_Template__c/fields/Body_Html__c.field-meta.xml
<CustomField>
    <fullName>Body_Html__c</fullName>
    <description
    >The editable HTML body of the email (the content inside the branded card). Authored via the rich-text editor on the Email Templates tab. Supports merge tokens ({SignerName}, {DocumentTitle}, {Message}, {ActionButton}, {VerificationCode}, etc.). The service wraps this in the branded header/footer chrome. Left blank falls back to the built-in default for the type.</description>
    <label>Body (HTML)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>