force-app/main/default/objects/DocGen_Email_Template__c/fields/Body_Plain__c.field-meta.xml
<CustomField>
    <fullName>Body_Plain__c</fullName>
    <description
    >Optional plain-text alternative part for the email. Supports the same merge tokens. Left blank, the service auto-derives a plain-text part by stripping the rendered HTML, improving deliverability without admin effort.</description>
    <label>Body (Plain Text)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>