force-app/main/default/objects/DocGen_Email_Template__c/fields/Brand_Color__c.field-meta.xml
<CustomField>
    <fullName>Brand_Color__c</fullName>
    <description
    >Optional per-template brand color override (#RRGGBB). Blank inherits the org default from Portwood Settings (Signature_Email_Brand_Color__c). Validated against strict 6-digit hex before use to prevent style injection.</description>
    <label>Brand Color Override</label>
    <length>7</length>
    <type>Text</type>
</CustomField>