force-app/main/default/objects/DocGen_Email_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Admin note describing the purpose or variant of this template. Not used in rendering.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>