force-app/main/default/objects/DocGen_Email_Template__c/fields/Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>Footer_Text__c</fullName>
    <description
    >Optional per-template footer text override. Blank inherits the org default from Portwood Settings (Signature_Email_Footer_Text__c).</description>
    <label>Footer Text Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>