force-app/main/default/objects/DocGen_Email_Template__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
    >When false the template is ignored and the service uses the next active record for the type, or the built-in default. Lets admins retire a template without deleting it.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>