force-app/main/default/objects/DocGen_Email_Template__c/fields/Layout_Mode__c.field-meta.xml
<CustomField>
    <fullName>Layout_Mode__c</fullName>
    <description
    >Managed = edit the body only; Portwood wraps the branded header/footer chrome around it. Full HTML = the Body (HTML) field IS the entire email document (your own layout/branding/hosted images) and is sent as-is with only merge/widget tokens resolved (no chrome). Defaults to Managed; branding-override fields apply to Managed only.</description>
    <label>Layout Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managed</fullName>
                <default>true</default>
                <label>Portwood layout (edit body, branded chrome)</label>
            </value>
            <value>
                <fullName>Full_Html</fullName>
                <label>Full custom HTML (your entire document)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>