force-app/main/default/objects/DocGen_Email_Template__c/fields/Logo_Asset_Key__c.field-meta.xml
<CustomField>
    <fullName>Logo_Asset_Key__c</fullName>
    <description
    >Shared Asset key (DocGen_Asset__c.Asset_Key__c) supplying the branded-header logo. When set, the renderer resolves the asset's LATEST file to its public delivery link at send time — replacing the asset's image updates the logo with no template edit. Takes precedence over the Logo URL fields; falls back to them when resolution misses.</description>
    <label>Logo Asset Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>