force-app/main/default/objects/DocGen_Email_Template__c/fields/Logo_Height__c.field-meta.xml
<CustomField>
    <fullName>Logo_Height__c</fullName>
    <description
    >Rendered logo height in pixels for the branded (Portwood layout) header. Blank = 48. Clamped to 16–200 at render time; the width cap scales proportionally (height/48 × 200px). Full-custom-HTML templates size their own img markup instead.</description>
    <label>Logo Height (px)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>