force-app/main/default/objects/DocGen_Email_Template__c/fields/Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Logo_Url__c</fullName>
    <description
    >Optional per-template logo URL override shown in the branded header. Blank inherits the org default from Portwood Settings (Signature_Email_Logo_Url__c).</description>
    <label>Logo URL Override</label>
    <type>Url</type>
</CustomField>