force-app/main/default/objects/DocGen_Email_Template__c/fields/Logo_Url_Extended__c.field-meta.xml
<CustomField>
    <fullName>Logo_Url_Extended__c</fullName>
    <description
    >Long-form logo URL override. Supersedes Logo_Url__c (a platform Url field, hard-capped at 255 characters and type-locked in the managed package) so Salesforce Files public-delivery URLs and other long links fit. When set, the renderer prefers this over Logo_Url__c.</description>
    <label>Logo URL Override (Long)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>