force-app/main/default/objects/DocGen_Email_Template__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description
    >Email subject line. Supports merge tokens such as {DocumentTitle}, {SignerName}, {SenderName}, {CompanyName}. Left blank falls back to the built-in default for the type.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>