force-app/main/default/objects/DocGen_Email_Template__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description
    >Which outbound email this template drives. The service resolves the single active record for each type at send time; one active record per type is expected. Required, so FLS is auto-granted (including to the guest profile that sends the PIN/request emails).</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signature_Request</fullName>
                <default>true</default>
                <label>Signature Request (to signer)</label>
            </value>
            <value>
                <fullName>Signature_Reminder</fullName>
                <label>Signature Reminder (to signer)</label>
            </value>
            <value>
                <fullName>Verification_PIN</fullName>
                <label>Email Verification Code (to signer)</label>
            </value>
            <value>
                <fullName>Signer_Completed</fullName>
                <label>Signer Completed (to sender)</label>
            </value>
            <value>
                <fullName>All_Signed</fullName>
                <label>All Signatures Complete (to sender)</label>
            </value>
            <value>
                <fullName>Signer_Declined</fullName>
                <label>Signer Declined (to sender)</label>
            </value>
            <value>
                <fullName>Completion_Confirmation</fullName>
                <label>Completion Confirmation (to signers)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>